test/fail/ReturnMissing.java
class ReturnMissing{
    public static void main(String[] a){
        System.out.println("Test missing return statement");
    }
}

class Test{
	

    int a1(){
		String word;
		String str;
    }
	
}
